--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,10 @@
 {
-  "redirects": [{ "source": "/", "destination": "/api" }]
+
+  "_comment": "Elhamdulillahirabbulalemin",
+  "redirects": [{ "source": "/", "destination": "/api" }],
+  "functions": {
+    "api/*.py": {
+      "runtime": "python3.11"
+    }
+  }
 }
