--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-  "redirects": [{ "source": "/", "destination": "/api" }],
-  "functions": {
-    "api/*.py": {
-      "runtime": "vercel-python@3.1.7"
-    }
-  }
+  "redirects": [{ "source": "/", "destination": "/api" }]
 }
